maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:19: error: value += is not a member of Int
  num+=1
     ^ShortestPathMaze:21: error: not enough arguments for method hasLeftWall: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(x>0 && !hasLeftWall() && getIndication(x-1,y)==9999){
                        ^ShortestPathMaze:24: error: not enough arguments for method hasTopWall: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if(y>0 && !hasTopWall() && getIndication(x,y-1)==9999){
                       ^ShortestPathMaze:27: error: not found: value hasRightWall
  if(x<n-1 && !hasRightWall() && getIndication(x+1,y)==9999){
               ^ShortestPathMaze:30: error: not found: value hasBottomWall
  if(y<m-1 && !hasBottomWall() && getIndication(x,y+1)==9999){
               ^